[gd_scene load_steps=15 format=3 uid="uid://cuolnrawceou0"]

[ext_resource type="Script" path="res://scripts/dark_ufo.gd" id="1_mx2jc"]
[ext_resource type="Texture2D" uid="uid://bnuu4t1dk37cf" path="res://imgs/ufo_dark01.svg" id="2_tq0jo"]
[ext_resource type="Texture2D" uid="uid://dqc4b0wovck6t" path="res://imgs/ufo_dark02.svg" id="3_6ee5g"]
[ext_resource type="Texture2D" uid="uid://ce0vb0ap2uw0h" path="res://imgs/ufo_hurt.svg" id="4_hescp"]
[ext_resource type="AudioStream" uid="uid://y3gdggnqxegb" path="res://sfx/explode.mp3" id="5_i2j31"]
[ext_resource type="AudioStream" uid="uid://bn1cwl15wt114" path="res://sfx/laser.mp3" id="6_jcy34"]

[sub_resource type="SpriteFrames" id="SpriteFrames_5jwcm"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": ExtResource("2_tq0jo")
}, {
"duration": 1.0,
"texture": ExtResource("3_6ee5g")
}],
"loop": true,
"name": &"default",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("4_hescp")
}],
"loop": false,
"name": &"flash",
"speed": 5.0
}]

[sub_resource type="Animation" id="Animation_2v1sd"]
resource_name = "flash"
length = 0.1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite:animation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [&"flash", &"default"]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_uoj6h"]
_data = {
"flash": SubResource("Animation_2v1sd")
}

[sub_resource type="Animation" id="Animation_0thcw"]
resource_name = "spin"
length = 4.0
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite:rotation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 4),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [0.0, 3.14159]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_vou0m"]
_data = {
"spin": SubResource("Animation_0thcw")
}

[sub_resource type="RectangleShape2D" id="RectangleShape2D_pk8re"]
size = Vector2(120, 980)

[sub_resource type="CanvasTexture" id="CanvasTexture_b7vlm"]

[sub_resource type="CircleShape2D" id="CircleShape2D_gkgpj"]
radius = 60.0

[node name="DarkUfo" type="Node2D"]
script = ExtResource("1_mx2jc")
hp = 3
value = 50
speed = 2.0
direction = Vector2(0, 1)

[node name="Sprite" type="AnimatedSprite2D" parent="."]
scale = Vector2(0.75, 0.75)
sprite_frames = SubResource("SpriteFrames_5jwcm")
autoplay = "default"

[node name="Notifier" type="VisibleOnScreenNotifier2D" parent="."]

[node name="Animation" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_uoj6h")
}

[node name="Spin" type="AnimationPlayer" parent="."]
autoplay = "spin"
libraries = {
"": SubResource("AnimationLibrary_vou0m")
}

[node name="Hit" type="AudioStreamPlayer" parent="."]
stream = ExtResource("5_i2j31")
volume_db = -10.0

[node name="Laser" type="AudioStreamPlayer" parent="."]
stream = ExtResource("6_jcy34")
volume_db = -25.0
pitch_scale = 0.75

[node name="Gun" type="Node2D" parent="."]

[node name="Timer" type="Timer" parent="."]

[node name="Sight" type="Area2D" parent="."]
collision_layer = 0

[node name="SightShape" type="CollisionShape2D" parent="Sight"]
position = Vector2(0, 530)
shape = SubResource("RectangleShape2D_pk8re")

[node name="TextureRect" type="TextureRect" parent="Sight"]
visible = false
modulate = Color(0, 0, 1, 0.113725)
offset_left = -60.0
offset_top = 40.0
offset_right = 60.0
offset_bottom = 1020.0
texture = SubResource("CanvasTexture_b7vlm")

[node name="Collider" type="Area2D" parent="."]
collision_layer = 2
collision_mask = 5

[node name="Collision" type="CollisionShape2D" parent="Collider"]
shape = SubResource("CircleShape2D_gkgpj")

[connection signal="timeout" from="Timer" to="." method="_fire"]
[connection signal="area_entered" from="Sight" to="." method="_open_fire"]
[connection signal="area_exited" from="Sight" to="." method="_close_fire"]
[connection signal="area_entered" from="Collider" to="." method="_on_collide"]
